; ModuleID = '/home/carl/AnghaBench/lab/q3map2/libs/l_net/extr_l_net_wins.c_WINS_GetSocketAddr.c'
source_filename = "/home/carl/AnghaBench/lab/q3map2/libs/l_net/extr_l_net_wins.c_WINS_GetSocketAddr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr_s = type { i32 }
%struct.sockaddr = type { i32 }
%struct.sockaddr_in = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [10 x i8] c"127.0.0.1\00", align 1
@myAddr = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @WINS_GetSocketAddr(i32 %0, %struct.sockaddr_s* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.sockaddr_s*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store %struct.sockaddr_s* %1, %struct.sockaddr_s** %4, align 8
  store i32 4, i32* %5, align 4
  %7 = load %struct.sockaddr_s*, %struct.sockaddr_s** %4, align 8
  %8 = call i32 @memset(%struct.sockaddr_s* %7, i32 0, i32 4)
  %9 = load i32, i32* %3, align 4
  %10 = load %struct.sockaddr_s*, %struct.sockaddr_s** %4, align 8
  %11 = bitcast %struct.sockaddr_s* %10 to %struct.sockaddr*
  %12 = call i32 @getsockname(i32 %9, %struct.sockaddr* %11, i32* %5)
  %13 = load %struct.sockaddr_s*, %struct.sockaddr_s** %4, align 8
  %14 = bitcast %struct.sockaddr_s* %13 to %struct.sockaddr_in*
  %15 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  store i32 %17, i32* %6, align 4
  %18 = load i32, i32* %6, align 4
  %19 = icmp eq i32 %18, 0
  br i1 %19, label %24, label %20

20:                                               ; preds = %2
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @inet_addr(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  %23 = icmp eq i32 %21, %22
  br i1 %23, label %24, label %30

24:                                               ; preds = %20, %2
  %25 = load i32, i32* @myAddr, align 4
  %26 = load %struct.sockaddr_s*, %struct.sockaddr_s** %4, align 8
  %27 = bitcast %struct.sockaddr_s* %26 to %struct.sockaddr_in*
  %28 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 0
  store i32 %25, i32* %29, align 4
  br label %30

30:                                               ; preds = %24, %20
  ret i32 0
}

declare dso_local i32 @memset(%struct.sockaddr_s*, i32, i32) #1

declare dso_local i32 @getsockname(i32, %struct.sockaddr*, i32*) #1

declare dso_local i32 @inet_addr(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
